@@ -1,3 +1,13 @@
+4821.	[bug]		When resigning ensure that the SOA's expire time is
+			always later that the resigning time of other records.
+			[RT #46473]
+
+4820.	[bug]		dns_db_subtractrdataset should transfer the resigning
+			information to the new header. [RT #46473]
+
+4819.	[bug]		Fully backout the transaction when adding a RRset
+			to the resigning / removal heaps fail. [RT #46473]
+
 4818.	[test]		The logfileconfig system test could intermittently
 			report false negatives on some platforms. [RT #46615]
 
